# civic-wallet

./: .gitignore  README.md  build_pipeline.sh
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/io/nicolaspurr/civicwallet/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/zk_bridge/: circuit.js  index.html
android/app/src/main/assets/zk_bridge/assets/: barretenberg-_6OEtkrR.js  barretenberg-threads-BmG-lzEI.js  index-BK2z_Mb2.js  main.worker-AQUU96xv.js  thread.worker-BE7W_srf.js
android/app/src/main/java/io/github/nicolaspurr/civicwallet/: MainActivity.kt  SmartWalletApplication.kt
android/app/src/main/java/uniffi/mopro/: mopro.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/io/nicolaspurr/civicwallet/: ArchitectureTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
circuit-generation/circuits/: cbdc.circom
circuit-generation/mopro/: Cargo.toml  Config.toml
circuit-generation/mopro/src/: lib.rs
circuit-generation/mopro/tests/bindings/circom/: test_multiplier2.kts  test_multiplier2.swift
circuit-generation/mopro/tests/bindings/ffi/: test_ffi_hello_world.kts  test_ffi_hello_world.swift
verification-server/: Config.toml  README.md
verification-server/src/: main.rs
zk-verification-server/: Cargo.toml
zk-verification-server/src/: main.rs
(+44 files in other folders)
