[package]
name = "zk-verification-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
